--- a/packages/ckeditor5-build-classic/sample/index.html
+++ b/packages/ckeditor5-build-classic/sample/index.html
@@ -15,7 +15,7 @@
 <h1>CKEditor 5 – classic editor build – development sample</h1>
 
 <div id="editor">
-	<h2>Sample</h2>
+	<!-- <h2>Sample</h2>
 
 	<p>This is an instance of the <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/overview.html#classic-editor">classic editor build</a>.</p>
 
@@ -23,7 +23,7 @@
 		<img src="../tests/manual/sample.jpg" alt="Autumn fields" />
 	</figure>
 
-	<p>You can use this sample to validate whether your <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/development/custom-builds.html">custom build</a> works fine.</p>
+	<p>You can use this sample to validate whether your <a href="https://ckeditor.com/docs/ckeditor5/latest/builds/guides/development/custom-builds.html">custom build</a> works fine.</p> -->
 </div>
 
 <script src="../build/ckeditor.js"></script>
@@ -31,7 +31,16 @@
 	ClassicEditor.create( document.querySelector( '#editor' ) )
 		.then( editor => {
 			window.editor = editor;
-		} )
+			console.log(editor);
+			editor.on("change:isReadOnly", evt => {
+              console.log(evt);
+            //   this.$emit("input", evt.editor.getData());
+            });
+			editor.model.document.on('change:data', () => {
+                    const data = editor.getData();
+					console.log(data);
+                });
+			} )
 		.catch( error => {
 			console.error( 'There was a problem initializing the editor.', error );
 		} );
